--- a/redeSocial/src/paginas/alterarDados.html
+++ b/redeSocial/src/paginas/alterarDados.html
@@ -20,7 +20,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                        <li class="nav-item"><a href="./conectado.html" class="nav-link">Início</a></li>
 
                         <li class="nav-item"><a href="#" class="nav-link">Notícias</a></li>
 
@@ -53,16 +53,16 @@
         <form action="../php/alteracaodeDados.php" method="post">
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" name="email" aria-describedby="emailInfo" autocomplete="off">
+              <input type="email" class="form-control" id="email" name="email" aria-describedby="emailInfo" autocomplete="off" required>
               <div id="emailInfo" class="form-text">Nós nunca compartilhamos suas informações com ninguém.</div>
             </div>
             <div class="mb-3">
               <label for="cep" class="form-label">Cep</label>
-              <input type="text" class="form-control" id="cep" name="cep" maxlength="11" autocomplete="off">
+              <input type="text" class="form-control" id="cep" name="cep" maxlength="11" autocomplete="off" required>
             </div>
             <div class="mb-3">
               <label for="senha" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="senha" name="senha" maxlength="14" autocomplete="off">
+              <input type="password" class="form-control" id="senha" name="senha" maxlength="14" autocomplete="off" required>
               <div id="emailInfo" class="form-text">Digite sua senha para alterar os dados.</div>
             </div>
           
