--- a/redeSocial/src/index.html
+++ b/redeSocial/src/index.html
@@ -2,51 +2,81 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LucasBook</title>
-  <link rel="stylesheet" href="./css/style_index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Principal</title>
+    <link rel="stylesheet" href="../assets/css/style_cadastro.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-  <header class="cabecalho ">
-    <nav class="navbar">
-      <ul class="logo navbar" >
-        <li class="nav-item"><img src="./img/logo.png" class="logo"></li>
-        <li class="nav-item"> <input type="text" name="pesquisa" class="pesquisa-input" placeholder="pesquisa"></li>
-      </ul>
+    <header class="pb-2">
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="logo" class="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
 
-    </ul>
-      <ul class="nav-menu">
-        <li class="nav-item"><a href="#" class="nav-link">Meu Perfil</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Loja</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Messenger</a></li>
-      </ul>
-      <div class="hamburguer">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </nav>
+                        <li class="nav-item"><a href="#" class="nav-link">Notícias</a></li>
 
-  </header>
-  <main class="conteudo">
-    <div class="stories">
-      <div class="fotos">
+                        <li class="nav-item"><a href="#" class="nav-link">Amigos</a></li>
 
-      </div>
-    </div>
-    <div class="publicacao">
-      <label for="">Publicacao<input type="text"></label>
-    </div>
-    <div class="feed">
 
-    </div>
-  </main>
-  <footer class="rodape">
+                        <li class="nav-item"><a href="#" class="nav-link">Marketplace</a></li>
+                 
 
-  </footer>
-  <script src="./javascript/index.js"></script>
+                        <li class="nav-item"><a href="#" class="nav-link usuario">Usuário</a></li>      
+
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Apis
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a href="./theMovieDb.html" class="dropdown-item">TheMovieDb</a></li>
+
+                            <li><a href="#" class="dropdown-item">Pokemon</a></li>
+
+                            <li><a href="#" class="dropdown-item">Outra</a></li>
+                        </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Configurações
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a href="./alterarDados.html" class="dropdown-item">Atualizar Dados</a></li>
+
+                                <li><a href="#" class="dropdown-item">Excluir Dados</a></li>
+
+                                <li><a href="../php/sair.php" class="dropdown-item">Sair</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="conteudo d-flex justify-content-around ">
+
+    </main>
+    <footer class="fixed-bottom">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+            © 2024 Copyright:
+            <a class="text-body" href="https://mdbootstrap.com/">LucasBook.com</a>
+        </div>
+    </footer>
+    <script src="../../Jquery/jquery.js"></script>
+    <script src="../assets/javascript/usuario_logado.js"></script>
+    <script src="../assets/javascript/api-tmdb.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
