nova pagina buscar filme

--- a/redeSocial/src/paginas/melhorAvaliados.html
+++ b/redeSocial/src/paginas/melhorAvaliados.html
@@ -20,7 +20,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                        <li class="nav-item"><a href="./conectado.html" class="nav-link">Início</a></li>
 
                         <li class="nav-item"><a href="#" class="nav-link" onclick="melhor()">Filmes Melhor Avaliados</a>
                         </li>
@@ -32,10 +32,11 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Apis
                             </a>
+                            
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a href="./theMovieDb.html" class="dropdown-item">TheMovieDb</a></li>
+                                <li><a href="#" class="dropdown-item">Melhor Avaliados</a></li>
 
-                                <li><a href="#" class="dropdown-item">Pokemon</a></li>
+                                <li><a href="./buscarFilme.html" class="dropdown-item">Buscar Filme</a></li>
 
                                 <li><a href="#" class="dropdown-item">Outra</a></li>
                             </ul>
@@ -97,6 +98,7 @@
     <script src="../../Jquery/jquery.js"></script>
     <script src="../assets/javascript/usuario_logado.js"></script>
     <script src="../assets/javascript/api-tmdb.js"></script>
+    <script src="../assets/javascript/buscarFilme.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
