--- a/redeSocial/src/paginas/buscarFilme.html
+++ b/redeSocial/src/paginas/buscarFilme.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principal</title>
-    <link rel="stylesheet" href="../assets/css/style_conectado.css">
+    <link rel="stylesheet" href="../assets/css/style_buscarFilmes.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 
@@ -20,7 +20,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                        <li class="nav-item"><a href="./conectado.html" class="nav-link">Início</a></li>
 
                         <li class="nav-item"><a href="#" class="nav-link">Notícias</a></li>
 
@@ -64,8 +64,17 @@
             </div>
         </nav>
     </header>
-    <main class="conteudo d-flex justify-content-around ">
-
+    <main class="conteudo d-flex flex-column align-items-center">
+        <form>
+            <div class="input-group mb-3">
+                <input type="text" class="form-control filmeEscolhido" placeholder="Digite o nome do filme"
+                    aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary buscarFilme" type="button" id="button-addon2">Buscar</button>
+            </div>
+        </form>
+        <div class="container mt-4">
+            <div class="row filmes justify-content-around"></div>
+        </div>
     </main>
     <footer class="fixed-bottom">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
@@ -75,7 +84,7 @@
     </footer>
     <script src="../../Jquery/jquery.js"></script>
     <script src="../assets/javascript/usuario_logado.js"></script>
-    <script src="../assets/javascript/api-tmdb.js"></script>
+    <script src="../assets/javascript/buscarFilme.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
