--- a/redeSocial/src/paginas/conectado.html
+++ b/redeSocial/src/paginas/conectado.html
@@ -67,7 +67,7 @@
     <main class="conteudo d-flex justify-content-around ">
 
     </main>
-    <footer class="fixed-bottom">
+    <footer>
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2024 Copyright:
             <a class="text-body" href="https://mdbootstrap.com/">LucasBook.com</a>
