--- a/redeSocial/src/paginas/buscarFilme.html
+++ b/redeSocial/src/paginas/buscarFilme.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Principal</title>
+    <title>The Movie Db - Buscar Filme</title>
     <link rel="stylesheet" href="../assets/css/style_buscarFilmes.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
@@ -65,18 +65,17 @@
         </nav>
     </header>
     <main class="conteudo d-flex flex-column align-items-center">
-        <form>
+        <form action="#" method="post" class="formulario">
             <div class="input-group mb-3">
-                <input type="text" class="form-control filmeEscolhido" placeholder="Digite o nome do filme"
-                    aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button class="btn btn-outline-secondary buscarFilme" type="button" id="button-addon2">Buscar</button>
+                <input type="text" class="form-control filmeEscolhido" placeholder="Digite o nome do filme">
+                <button class="btn btn-outline-secondary buscarFilme" type="submit" id="button-addon2">Buscar</button>
             </div>
         </form>
         <div class="container mt-4">
             <div class="row filmes justify-content-around"></div>
         </div>
     </main>
-    <footer class="fixed-bottom">
+    <footer>
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2024 Copyright:
             <a class="text-body" href="https://mdbootstrap.com/">LucasBook.com</a>
