--- a/redeSocial/src/paginas/melhorAvaliados.html
+++ b/redeSocial/src/paginas/melhorAvaliados.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Movie DB</title>
-    <link rel="stylesheet" href="../assets/css/style_theMovieDb.css">
+    <title>The Movie DB- Melhor Avaliados</title>
+    <link rel="stylesheet" href="../assets/css/style_melhorAvaliados.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 
@@ -22,7 +22,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a href="./conectado.html" class="nav-link">Início</a></li>
 
-                        <li class="nav-item"><a href="#" class="nav-link" onclick="melhor()">Filmes Melhor Avaliados</a>
+                        <li class="nav-item"><a href="./melhorAvaliados.html" class="nav-link">Filmes Melhor Avaliados</a>
                         </li>
 
                         <li class="nav-item"><a href="#" class="nav-link usuario">Usuário</a></li>
@@ -89,7 +89,7 @@
               </nav>
         </table>
     </main>
-    <footer class="fixed-bottom">
+    <footer>
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2024 Copyright:
             <a class="text-body" href="https://mdbootstrap.com/">LucasBook.com</a>
@@ -98,7 +98,6 @@
     <script src="../../Jquery/jquery.js"></script>
     <script src="../assets/javascript/usuario_logado.js"></script>
     <script src="../assets/javascript/api-tmdb.js"></script>
-    <script src="../assets/javascript/buscarFilme.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
