--- a/redeSocial/src/paginas/alterarDados.html
+++ b/redeSocial/src/paginas/alterarDados.html
@@ -22,7 +22,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a href="./conectado.html" class="nav-link">Início</a></li>
 
-                        <li class="nav-item"><a href="#" class="nav-link">Notícias</a></li>
+                        <li class="nav-item"><a href="./noticias.html" class="nav-link">Notícias</a></li>
 
                         <li class="nav-item"><a href="#" class="nav-link">Amigos</a></li>
 
