--- a/redeSocial/src/paginas/noticias.html
+++ b/redeSocial/src/paginas/noticias.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Movie Db - Buscar Filme</title>
-    <link rel="stylesheet" href="../assets/css/style_buscarFilmes.css">
+    <title>The Movie DB- Melhor Avaliados</title>
+    <link rel="stylesheet" href="../assets/css/style_noticias.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 
@@ -22,13 +22,8 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a href="./conectado.html" class="nav-link">Início</a></li>
 
-                        <li class="nav-item"><a href="./noticias.html" class="nav-link">Notícias</a></li>
-
-                        <li class="nav-item"><a href="#" class="nav-link">Amigos</a></li>
-
-
-                        <li class="nav-item"><a href="#" class="nav-link">Marketplace</a></li>
-
+                        <li class="nav-item"><a href="./melhorAvaliados.html" class="nav-link">Filmes Melhor Avaliados</a>
+                        </li>
 
                         <li class="nav-item"><a href="#" class="nav-link usuario">Usuário</a></li>
 
@@ -37,11 +32,13 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 TheMovieDb
                             </a>
+                            
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a href="./melhorAvaliados.html" class="dropdown-item">Melhor Avaliados</a></li>
+                                <li><a href="#" class="dropdown-item">Melhor Avaliados</a></li>
 
                                 <li><a href="./buscarFilme.html" class="dropdown-item">Buscar Filme</a></li>
 
+                                <li><a href="#" class="dropdown-item">Outra</a></li>
                             </ul>
                         </li>
 
@@ -50,7 +47,6 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Configurações
                             </a>
-
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a href="./alterarDados.html" class="dropdown-item">Atualizar Dados</a></li>
 
@@ -64,16 +60,8 @@
             </div>
         </nav>
     </header>
-    <main class="conteudo d-flex flex-column align-items-center">
-        <form action="#" method="post" class="formulario">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control filmeEscolhido" placeholder="Digite o nome do filme">
-                <button class="btn btn-outline-secondary buscarFilme" type="submit" id="button-addon2">Buscar</button>
-            </div>
-        </form>
-        <div class="container mt-4">
-            <div class="row filmes justify-content-around"></div>
-        </div>
+    <main class="conteudo">
+        <span class="noticias"></span>
     </main>
     <footer>
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
@@ -83,7 +71,7 @@
     </footer>
     <script src="../../Jquery/jquery.js"></script>
     <script src="../assets/javascript/usuario_logado.js"></script>
-    <script src="../assets/javascript/buscarFilme.js"></script>
+    <script src="../assets/javascript/noticias.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
